refactor: rename variables called record